WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158637
setUpStaticFunctionSlot does not handle Builtin|Accessor properties
https://bugs.webkit.org/show_bug.cgi?id=158637
Summary
setUpStaticFunctionSlot does not handle Builtin|Accessor properties
Gavin Barraclough
Reported
2016-06-10 15:14:00 PDT
setUpStaticFunctionSlot contains a duplicate copy of the body of the function reifyStaticProperty - however it is missing handling for Accessor type under Builtin functions. Fix the bug by de-duplicating – setUpStaticFunctionSlot should just call reifyStaticProperty.
Attachments
Fix
(4.52 KB, patch)
2016-06-10 15:16 PDT
,
Gavin Barraclough
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-yosemite-wk2
(482.99 KB, application/zip)
2016-06-10 16:04 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews100 for mac-yosemite
(305.58 KB, application/zip)
2016-06-10 16:06 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews112 for mac-yosemite
(1.10 MB, application/zip)
2016-06-10 16:10 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews122 for ios-simulator-wk2
(269.56 KB, application/zip)
2016-06-10 16:11 PDT
,
Build Bot
no flags
Details
Fix
(4.04 KB, patch)
2016-06-10 17:34 PDT
,
Gavin Barraclough
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2016-06-10 15:16:25 PDT
Created
attachment 281052
[details]
Fix
Gavin Barraclough
Comment 2
2016-06-10 15:18:38 PDT
Comment on
attachment 281052
[details]
Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=281052&action=review
> Source/JavaScriptCore/ChangeLog:10 > + Fix the bug by de-duplicating â setUpStaticFunctionSlot should just call reifyStaticProperty.
Oops - should be hyphen. Will fix before landing.
Build Bot
Comment 3
2016-06-10 16:04:39 PDT
Comment on
attachment 281052
[details]
Fix
Attachment 281052
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1480719
Number of test failures exceeded the failure limit.
Build Bot
Comment 4
2016-06-10 16:04:44 PDT
Created
attachment 281055
[details]
Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-06-10 16:06:23 PDT
Comment on
attachment 281052
[details]
Fix
Attachment 281052
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1480733
Number of test failures exceeded the failure limit.
Build Bot
Comment 6
2016-06-10 16:06:27 PDT
Created
attachment 281056
[details]
Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-06-10 16:10:04 PDT
Comment on
attachment 281052
[details]
Fix
Attachment 281052
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1480711
Number of test failures exceeded the failure limit.
Build Bot
Comment 8
2016-06-10 16:10:09 PDT
Created
attachment 281057
[details]
Archive of layout-test-results from ews112 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-06-10 16:11:38 PDT
Comment on
attachment 281052
[details]
Fix
Attachment 281052
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1480720
Number of test failures exceeded the failure limit.
Build Bot
Comment 10
2016-06-10 16:11:44 PDT
Created
attachment 281058
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Gavin Barraclough
Comment 11
2016-06-10 17:34:58 PDT
Created
attachment 281065
[details]
Fix
Geoffrey Garen
Comment 12
2016-06-13 13:51:38 PDT
Comment on
attachment 281065
[details]
Fix r=me
Gavin Barraclough
Comment 13
2016-06-13 23:55:49 PDT
Committed revision 202033.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug