setUpStaticFunctionSlot does not handle Builtin|Accessor properties https://bugs.webkit.org/show_bug.cgi?id=158637

Reviewed by Geoff Garen.

setUpStaticFunctionSlot contains a duplicate copy of the body of the function reifyStaticProperty
- however it is missing handling for Accessor type under Builtin functions.
Fix the bug by de-duplicating - setUpStaticFunctionSlot should just call reifyStaticProperty.

* runtime/Lookup.cpp:
(JSC::setUpStaticFunctionSlot):
    - should just call reifyStaticProperty.
* runtime/Lookup.h:
(JSC::lookupPut):
(JSC::reifyStaticProperty):
    - changed reifyStaticProperty to take PropertyName.



Canonical link: https://commits.webkit.org/176812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202033 268f45cc-cd09-0410-ab3c-d52691b4dbfc